# financial-intelligence-agent

./: .env.example  Makefile  README.md  pyproject.toml
src/financial_intel/: __init__.py  config.py  state.py
src/financial_intel/agents/: __init__.py  filings_agent.py  stakeholder_agent.py
src/financial_intel/api/: __init__.py  main.py
src/financial_intel/cli/: __init__.py  main.py
src/financial_intel/graph/: __init__.py  market_agent.py  supervisor.py  synthesis.py
src/financial_intel/observability/: __init__.py
src/financial_intel/rag/: __init__.py  pipeline.py
src/financial_intel/tools/: __init__.py  core.py  registry.py
