[project]
name = "financial-intel"
version = "0.1.0"
description = "Multi-agent Financial Intelligence Research Agent — built with LangGraph, AutoGen, CrewAI, LangChain (equity research (SEC filings, earnings, 13F, options flow))"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core LangChain/LangGraph
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",

    # LLMs & Providers
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "litellm>=1.50.0",  # Unified LLM interface

    # AutoGen
    "autogen-agentchat>=0.2.0",
    "autogen-ext>=0.2.0",

    # CrewAI
    "crewai>=0.80.0",
    "crewai-tools>=0.1.0",

    # Vector DBs & RAG
    "chromadb>=0.5.0",
    "pinecone>=5.0.0",
    "weaviate-client>=4.0.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",

    # Document Processing
    "pymupdf>=1.23.0",
    "unstructured>=0.15.0",
    "langchain-text-splitters>=0.3.0",

    # Web Search & APIs
    "tavily-python>=0.3.0",
    "serpapi>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # API Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",

    # Observability & Monitoring
    "loguru>=0.7.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",

    # Config & Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",

    # Data & ML
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "bandit>=1.7.0",
    "trivy>=0.1.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
eval = [
    "mlflow>=2.14.0",
    "wandb>=0.17.0",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "financial_intel", from = "src"}]

[tool.poetry.group.dev.dependencies]
## Included in [project.optional-dependencies] above

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "W", "C4", "C90", "T20", "ARG", "PTH", "ERA", "SIM", "TD", "FA", "QL"]
ignore = ["S101", "S311", "ARG001", "ARG002"]
fix = true
format.quote-style = "single"
format.indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/financial_intel"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B104", "B311", "B601"]